--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/reset.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
   <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
@@ -34,11 +35,11 @@
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
-      <div class="container">
+      <div class="container" style="color: white;">
         <br><br>
-        <h1 class="header center  text-lighten-2">Robert Morris</h1>
+        <h1 class="header center  text-lighten-2">Web Developer</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Fullstack Developer</h5>
+          <h5 class="header col s12 light">Javascript developer</h5>
         </div>
         <br><br>
 
@@ -56,27 +57,28 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">Development</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Hi, I'm Robert a front end web developer with extensive knowledge of HTML, CSS, Javascript, and Jquery. I also have experience with CSS libaries such as bootstrap and materialize.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Focused</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">I'm hard working, motivated and am very passionate about using my skills to help others. </p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Skills</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">It is still very early in my developer career but I have already become efficient in several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, and Node.js.
+            </p>
           </div>
         </div>
       </div>
@@ -89,7 +91,8 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">"Learning never exhausts the mind."
+            Leonardo da Vinci</h5>
         </div>
       </div>
     </div>
@@ -162,7 +165,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">"No act of kindness, no matter how small, is ever wasted." Aesop</h5>
         </div>
       </div>
     </div>
