fixed header height now just have to do readme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="nav" style="background-color:black; color:#ff9e80;" role="navigation" id="header">
+  <nav class="nav" style="background-color:black; color:#ff9e80; height: 110px;" role="navigation" id="header">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo" style="color:#ff9e80;">Robert Morris</a>
       <ul class="right hide-on-med-and-down">
