--- a/index.html
+++ b/index.html
@@ -236,7 +236,14 @@
     </div>
   </div>
   <div class="col l4 s12">
-   
+    <div class="card">
+      <div class="card-image">
+        <img src="assets/images/liri.png">
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/belamorris/liri-node-app.git"><i class="fab fa-github-square fa-2x"></i></a>
+      </div>
+    </div>
   </div>
 </div>
   </div>
