--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
         <img src="assets/images/liri.png">
       </div>
       <div class="card-action">
+          <a href="https://github.com/belamorris/liri-node-app.git">The Liri Node App</a>
         <a href="https://github.com/belamorris/liri-node-app.git"><i class="fab fa-github-square fa-2x"></i></a>
       </div>
     </div>
