--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Robert Morris</title>
 
   <!-- CSS  -->
   <link rel="stylesheet" href="assets/css/reset.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-  <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
+
 <body>
   <nav class="nav" style="background-color:black; color:#ff9e80; height: 110px;" role="navigation" id="header">
     <div class="nav-wrapper container">
@@ -31,7 +34,7 @@
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  
+
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -59,7 +62,8 @@
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Development</h5>
 
-            <p class="light">Hi, I'm Robert a front end web developer with extensive knowledge of HTML, CSS, Javascript, and Jquery. I also have experience with CSS libaries such as bootstrap and materialize.</p>
+            <p class="light">Hi, I'm Robert a front end web developer with extensive knowledge of HTML, CSS,
+              Javascript, and Jquery. I also have experience with CSS libaries such as bootstrap and materialize.</p>
           </div>
         </div>
 
@@ -68,7 +72,8 @@
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">group</i></h2>
             <h5 class="center">Focused</h5>
 
-            <p class="light">I'm hard working, motivated and am very passionate about using my skills to help others. </p>
+            <p class="light">I'm hard working, motivated and am very passionate about using my skills to help others.
+            </p>
           </div>
         </div>
 
@@ -77,7 +82,8 @@
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">settings</i></h2>
             <h5 class="center">Skills</h5>
 
-            <p class="light">It is still very early in my developer career but I have already become efficient in several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, and Node.js.
+            <p class="light">It is still very early in my developer career but I have already become efficient in
+              several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, and Node.js.
             </p>
           </div>
         </div>
@@ -99,12 +105,8 @@
     <div class="parallax"><img src="assets/images/headerimg3.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
-  <div
-  id="contact"
-  class="container center"
-  style="width:100%; min-width: 100%; padding: 5px; margin: 10px;"
->
-  <div class="col m10 offset-m1 l5 s12 center" style="color:black;">
+  <div id="contact" class="container center" style="width:100%; min-width: 100%; padding: 5px; margin: 10px;">
+    <div class="col m10 offset-m1 l5 s12 center" style="color:black;">
       <!-- Header -->
       <h2 class="center">Contact Me</h2>
       <i class="small material-icons">contact_phone</i>
@@ -112,53 +114,39 @@
       <i class="small material-icons">contact_mail</i>
       <h5>belamorris@gmail.com</h5>
       <div class="row">
-          <form class="col m10 offset-m1 s12" method="post">
-              <div class="row">
-                  <div class="input-field col s12">
-                      <input id="name" type="text" />
-                      <!-- Name -->
-                      <label for="name">Name</label>
-                  </div>
-                  <div class="input-field col s12">
-                      <input
-                          id="email"
-                          type="email"
-                          class="form-input"
-                      />
-                      <!-- Email -->
-                      <label for="email">Email</label>
-                  </div>
-                  <div class="input-field col s12">
-                      <textarea
-                          id="message"
-                          class="materialize-textarea"
-                      ></textarea>
-                      <!-- Message -->
-                      <label for="message">Message</label>
-                  </div>
-              </div>
-              <!-- Button -->
-              <div class="row">
-                  <div class="col m12 center">
-                      <p class="right-align">
-                          <button
-                              style="background-color: black; color:#fdd835;"
-                              class="btn btn-large waves-effect waves-light"
-                              type="submit"
-                              body="message"
-                              value="Send Email"
-                              target="_top"
-                              action="mailto:belamorris@gmail.com"
-                          >
-                              Send Message
-                          </button>
-                      </p>
-                  </div>
-              </div>
-          </form>
+        <form class="col m10 offset-m1 s12" method="post">
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="name" type="text" />
+              <!-- Name -->
+              <label for="name">Name</label>
+            </div>
+            <div class="input-field col s12">
+              <input id="email" type="email" class="form-input" />
+              <!-- Email -->
+              <label for="email">Email</label>
+            </div>
+            <div class="input-field col s12">
+              <textarea id="message" class="materialize-textarea"></textarea>
+              <!-- Message -->
+              <label for="message">Message</label>
+            </div>
+          </div>
+          <!-- Button -->
+          <div class="row">
+            <div class="col m12 center">
+              <p class="right-align">
+                <button style="background-color: black; color:#fdd835;" class="btn btn-large waves-effect waves-light"
+                  type="submit" body="message" value="Send Email" target="_top" action="mailto:belamorris@gmail.com">
+                  Send Message
+                </button>
+              </p>
+            </div>
+          </div>
+        </form>
       </div>
+    </div>
   </div>
-</div>
 
 
   <div class="parallax-container valign-wrapper">
@@ -172,115 +160,125 @@
     <div class="parallax"><img src="assets/images/headerimg2.jpg" alt="Unsplashed background img 3"></div>
   </div>
   <div class="container" style="text-align: center;" id="portfolio">
-  <div class="row">
-    <div class="col l12" style="border-bottom: solid 2px #ff9e80;">
-      <h2>Portfolio</h2>
-    </div>
-  </div>
-<div class="row">
-  <div class="col l4 s12">
-    <div class="card">
-      <div class="card-image">
-        <img src="assets/images/advadvi.png">
-      </div>
-      <div class="card-action">
-        <a href="https://raynamcginnis.github.io/group-project-1/">Adventure Advisors</a>
-        <a href="https://github.com/belamorris/group-project-1.git"><i class="fab fa-github-square fa-2x"></i></a>
+    <div class="row">
+      <div class="col l12" style="border-bottom: solid 2px #ff9e80;">
+        <h2>Portfolio</h2>
       </div>
     </div>
-  </div>
-  <div class="col l4 s12">
-    <div class="card">
-      <div class="card-image">
-        <img src="assets/images/giftastic.png">
+    <div class="row">
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/advadvi.png">
+          </div>
+          <div class="card-action">
+            <a href="https://raynamcginnis.github.io/group-project-1/">Adventure Advisors</a>
+            <a href="https://github.com/belamorris/group-project-1.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
       </div>
-      <div class="card-action">
-        <a href="https://belamorris.github.io/Giftastic/">Giftastic!</a>
-        <a href="https://github.com/belamorris/Giftastic.git"><i class="fab fa-github-square fa-2x"></i></a>
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/giftastic.png">
+          </div>
+          <div class="card-action">
+            <a href="https://belamorris.github.io/Giftastic/">Giftastic!</a>
+            <a href="https://github.com/belamorris/Giftastic.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="col l4 s12">
-    <div class="card">
-      <div class="card-image">
-        <img src="assets/images/trivia.png">
-      </div>
-      <div class="card-action">
-        <a href="https://belamorris.github.io/TriviaGame/">Trivia Game</a>
-        <a href="https://github.com/belamorris/TriviaGame.git"><i class="fab fa-github-square fa-2x"></i></a>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col l4 s12">
-    <div class="card">
-      <div class="card-image">
-        <img src="assets/images/musicwars.png">
-      </div>
-      <div class="card-action">
-        <a href="https://belamorris.github.io/unit-4-game/">Music Wars</a>
-        <a href="https://github.com/belamorris/unit-4-game.git"><i class="fab fa-github-square fa-2x"></i></a>
-      </div>
-    </div>
-  </div>
-  <div class="col l4 s12">
-    <div class="card">
-      <div class="card-image">
-        <img src="assets/images/thedude.png">
-      </div>
-      <div class="card-action">
-        <a href="https://belamorris.github.io/Word-Guess/">The Dude Hangman!</a>
-        <a href="https://github.com/belamorris/Word-Guess.git"><i class="fab fa-github-square fa-2x"></i></a>
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/trivia.png">
+          </div>
+          <div class="card-action">
+            <a href="https://belamorris.github.io/TriviaGame/">Trivia Game</a>
+            <a href="https://github.com/belamorris/TriviaGame.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col l4 s12">
-    <div class="card">
-      <div class="card-image">
-        <img src="assets/images/liri.png">
+    <div class="row">
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/musicwars.png">
+          </div>
+          <div class="card-action">
+            <a href="https://belamorris.github.io/unit-4-game/">Music Wars</a>
+            <a href="https://github.com/belamorris/unit-4-game.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
       </div>
-      <div class="card-action">
-          <a href="https://github.com/belamorris/liri-node-app.git">The Liri Node App</a>
-        <a href="https://github.com/belamorris/liri-node-app.git"><i class="fab fa-github-square fa-2x"></i></a>
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/thedude.png">
+          </div>
+          <div class="card-action">
+            <a href="https://belamorris.github.io/Word-Guess/">The Dude Hangman!</a>
+            <a href="https://github.com/belamorris/Word-Guess.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/liri.png">
+          </div>
+          <div class="card-action">
+            <a href="https://github.com/belamorris/liri-node-app.git">The Liri Node App</a>
+            <a href="https://github.com/belamorris/liri-node-app.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <a href="https://stormy-ravine-72203.herokuapp.com/"><img src="assets/images/friendfinder.png"></a>
+          </div>
+          <div class="card-action">
+            <a href="https://github.com/belamorris/FriendFinder.git">The Liri Node App</a>
+            <a href="https://github.com/belamorris/FriendFinder.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
   </div>
 
   <footer class="page-footer" style="background:#ff9e80; color:white;">
     <div class="container" style="text-align: center;">
       <div class="row">
-    <div class="col l4 s12">
-      <a href="assets/images/Resume.pdf"><i class="fas fa-file-pdf fa-9x"></i>
-      <h5>resume</h5></a>
-    </div>
+        <div class="col l4 s12">
+          <a href="assets/images/Resume.pdf"><i class="fas fa-file-pdf fa-9x"></i>
+            <h5>resume</h5>
+          </a>
+        </div>
         <div class="col l4 s12">
           <span style="color:white;"><a href="https://github.com/belamorris"><i class="fab fa-github-square fa-9x color: white;"></i>
-          <h5>GitHub</h5></span></a>
+              <h5>GitHub</h5></span></a>
         </div>
         <div class="col l4 s12">
           <a href="https://www.linkedin.com/in/robertdmorrisjr/"><i class="fab fa-linkedin fa-9x"></i>
-          <h5>LinkedIn</h5></a>
+            <h5>LinkedIn</h5>
+          </a>
         </div>
       </div>
     </div>
     <div class="row footer-copyright" style="margin-bottom: 0;">
       <div class="col l3 s12">
-          Copyright &copy;
-          <a style="color:black;">Robert Morris</a>
+        Copyright &copy;
+        <a style="color:black;">Robert Morris</a>
       </div>
       <div class="col l4 s12">
-          Made with:
-          <a
-              style="color:black;"
-              href="https://materializecss.com/"
-          >
-              Materialize
-          </a>
+        Made with:
+        <a style="color:black;" href="https://materializecss.com/">
+          Materialize
+        </a>
       </div>
-  </div>
+    </div>
   </footer>
 
 
@@ -290,5 +288,6 @@
   <script src="assets/js/init.js"></script>
   <script type="text/javascript" src="assets/js/logic.js"></script>
 
-  </body>
+</body>
+
 </html>
