updated portfolio with project 2 and current language skills

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <br><br>
         <h1 class="header center  text-lighten-2">Web Developer</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Javascript developer</h5>
+          <h5 class="header col s12 light">FullStack developer</h5>
         </div>
         <br><br>
 
@@ -62,8 +62,8 @@
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Development</h5>
 
-            <p class="light">Hi, I'm Robert a front end web developer with extensive knowledge of HTML, CSS,
-              Javascript, and Jquery. I also have experience with CSS libaries such as bootstrap and materialize.</p>
+            <p class="light">Hi, I'm Robert a full stack developer with extensive knowledge of HTML, CSS,
+              Javascript, and Jquery and backend languages such as Node.js, MySQL, Sequalize and Mongodb.  I also have experience with CSS libaries such as bootstrap and materialize.</p>
           </div>
         </div>
 
@@ -83,7 +83,7 @@
             <h5 class="center">Skills</h5>
 
             <p class="light">It is still very early in my developer career but I have already become efficient in
-              several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, and Node.js.
+              several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, Node.js, Sequalize, MySQL, Handlebars and Mongodb.
             </p>
           </div>
         </div>
@@ -242,6 +242,17 @@
           <div class="card-action">
             <a href="https://github.com/belamorris/FriendFinder.git">The Liri Node App</a>
             <a href="https://github.com/belamorris/FriendFinder.git"><i class="fab fa-github-square fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col l4 s12">
+        <div class="card">
+          <div class="card-image">
+            <a href="https://infinite-badlands-40246.herokuapp.com/"><img src="assets/images/Look_Alike.png"></a>
+          </div>
+          <div class="card-action">
+            <a href="https://infinite-badlands-40246.herokuapp.com/">Look Alike App</a>
+            <a href="https://github.com/belamorris/Project2.git"><i class="fab fa-github-square fa-2x"></i></a>
           </div>
         </div>
       </div>
