--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- CSS  -->
   <link rel="stylesheet" href="assets/css/reset.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
   <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
@@ -63,7 +63,8 @@
             <h5 class="center">Development</h5>
 
             <p class="light">Hi, I'm Robert a full stack developer with extensive knowledge of HTML, CSS,
-              Javascript, and Jquery and backend languages such as Node.js, MySQL, Sequalize and Mongodb.  I also have experience with CSS libaries such as bootstrap and materialize.</p>
+              Javascript, and Jquery and backend languages such as Node.js, MySQL, Sequalize and Mongodb. I also have
+              experience with CSS libaries such as bootstrap and materialize.</p>
           </div>
         </div>
 
@@ -83,7 +84,8 @@
             <h5 class="center">Skills</h5>
 
             <p class="light">It is still very early in my developer career but I have already become efficient in
-              several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, Node.js, Sequalize, MySQL, Handlebars and Mongodb.
+              several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, Node.js, Sequalize,
+              MySQL, Handlebars and Mongodb.
             </p>
           </div>
         </div>
@@ -177,17 +179,7 @@
           </div>
         </div>
       </div>
-      <div class="col l4 s12">
-        <div class="card">
-          <div class="card-image">
-            <img src="assets/images/giftastic.png">
-          </div>
-          <div class="card-action">
-            <a href="https://belamorris.github.io/Giftastic/">Giftastic!</a>
-            <a href="https://github.com/belamorris/Giftastic.git"><i class="fab fa-github-square fa-2x"></i></a>
-          </div>
-        </div>
-      </div>
+
       <div class="col l4 s12">
         <div class="card">
           <div class="card-image">
@@ -212,17 +204,7 @@
           </div>
         </div>
       </div>
-      <div class="col l4 s12">
-        <div class="card">
-          <div class="card-image">
-            <img src="assets/images/thedude.png">
-          </div>
-          <div class="card-action">
-            <a href="https://belamorris.github.io/Word-Guess/">The Dude Hangman!</a>
-            <a href="https://github.com/belamorris/Word-Guess.git"><i class="fab fa-github-square fa-2x"></i></a>
-          </div>
-        </div>
-      </div>
+
       <div class="col l4 s12">
         <div class="card">
           <div class="card-image">
@@ -234,17 +216,7 @@
           </div>
         </div>
       </div>
-      <div class="col l4 s12">
-        <div class="card">
-          <div class="card-image">
-            <a href="https://stormy-ravine-72203.herokuapp.com/"><img src="assets/images/friendfinder.png"></a>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/belamorris/FriendFinder.git">The Liri Node App</a>
-            <a href="https://github.com/belamorris/FriendFinder.git"><i class="fab fa-github-square fa-2x"></i></a>
-          </div>
-        </div>
-      </div>
+
       <div class="col l4 s12">
         <div class="card">
           <div class="card-image">
@@ -268,7 +240,8 @@
           </a>
         </div>
         <div class="col l4 s12">
-          <span style="color:white;"><a href="https://github.com/belamorris"><i class="fab fa-github-square fa-9x color: white;"></i>
+          <span style="color:white;"><a href="https://github.com/belamorris"><i
+                class="fab fa-github-square fa-9x color: white;"></i>
               <h5>GitHub</h5></span></a>
         </div>
         <div class="col l4 s12">
