added new projects and updated info

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <h2 class="center" style="color:#ff9e80;"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Development</h5>
 
-            <p class="light">Hi, I'm Robert a full stack developer with extensive knowledge of HTML, CSS,
-              Javascript, and Jquery and backend languages such as Node.js, MySQL, Sequalize and Mongodb. I also have
+            <p class="light">Hi, I'm Robert a full stack developer with knowledge of HTML, CSS,
+              Javascript, Jquery, React and backend languages such as Node.js, MySQL, Sequalize and Mongodb. I also have
               experience with CSS libaries such as bootstrap and materialize.</p>
           </div>
         </div>
@@ -85,7 +85,7 @@
 
             <p class="light">It is still very early in my developer career but I have already become efficient in
               several languages. Such as HTML, CSS, Bootsrap, Materialize, Javascript, JQuery, Node.js, Sequalize,
-              MySQL, Handlebars and Mongodb.
+              MySQL, Handlebars, Mongodb and React.
             </p>
           </div>
         </div>
@@ -183,11 +183,11 @@
       <div class="col l4 s12">
         <div class="card">
           <div class="card-image">
-            <img src="assets/images/trivia.png">
+            <img src="assets/images/cheatsheet.png">
           </div>
           <div class="card-action">
-            <a href="https://belamorris.github.io/TriviaGame/">Trivia Game</a>
-            <a href="https://github.com/belamorris/TriviaGame.git"><i class="fab fa-github-square fa-2x"></i></a>
+            <a href="https://blooming-basin-96818.herokuapp.com/">Web Dev Cheatsheets</a>
+            <a href="https://github.com/belamorris/group-project-3.git"><i class="fab fa-github-square fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -196,11 +196,11 @@
       <div class="col l4 s12">
         <div class="card">
           <div class="card-image">
-            <img src="assets/images/musicwars.png">
+            <img src="assets/images/clickygame.png">
           </div>
           <div class="card-action">
-            <a href="https://belamorris.github.io/unit-4-game/">Music Wars</a>
-            <a href="https://github.com/belamorris/unit-4-game.git"><i class="fab fa-github-square fa-2x"></i></a>
+            <a href="https://belamorris.github.io/clicky-game/">Music Wars</a>
+            <a href="https://github.com/belamorris/clicky-game.git"><i class="fab fa-github-square fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -228,6 +228,7 @@
           </div>
         </div>
       </div>
+      
     </div>
   </div>
 
