changed contact form

--- a/index.html
+++ b/index.html
@@ -115,38 +115,9 @@
       <h5>(303)726-5611</h5>
       <i class="small material-icons">contact_mail</i>
       <h5>belamorris@gmail.com</h5>
-      <div class="row">
-        <form class="col m10 offset-m1 s12" method="post">
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="name" type="text" />
-              <!-- Name -->
-              <label for="name">Name</label>
-            </div>
-            <div class="input-field col s12">
-              <input id="email" type="email" class="form-input" />
-              <!-- Email -->
-              <label for="email">Email</label>
-            </div>
-            <div class="input-field col s12">
-              <textarea id="message" class="materialize-textarea"></textarea>
-              <!-- Message -->
-              <label for="message">Message</label>
-            </div>
-          </div>
-          <!-- Button -->
-          <div class="row">
-            <div class="col m12 center">
-              <p class="right-align">
-                <button style="background-color: black; color:#fdd835;" class="btn btn-large waves-effect waves-light"
-                  type="submit" body="message" value="Send Email" target="_top" action="mailto:belamorris@gmail.com">
-                  Send Message
-                </button>
-              </p>
-            </div>
           </div>
         </form>
-      </div>
+      </div> -->
     </div>
   </div>
 
